Add SRGS evaluation based on extended parser.