@@ -7,7 +7,7 @@
 
   <groupId>de.dfki.mlt</groupId>
   <artifactId>vonda</artifactId>
-  <version>3.0.2</version>
+  <version>3.0.3</version>
   <packaging>jar</packaging>
 
   <properties>
@@ -50,14 +50,14 @@
     <dependency>
       <groupId>de.dfki.mlt</groupId>
       <artifactId>cplan-ccg</artifactId>
-      <version>1.2.4</version>
+      <version>1.2.5</version>
       <type>jar</type>
     </dependency>
 
     <dependency>
       <groupId>de.dfki.mlt</groupId>
       <artifactId>cplan-core</artifactId>
-      <version>1.2.4</version>
+      <version>1.2.5</version>
       <type>jar</type>
     </dependency>
 
@@ -104,7 +104,7 @@
     <dependency>
       <groupId>de.dfki.mlt</groupId>
       <artifactId>srgs-parser</artifactId>
-      <version>1.3.4</version>
+      <version>1.4.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -236,6 +236,22 @@
               <followSymlinks>false</followSymlinks>
             </fileset>
           </filesets>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>
+          --add-modules=ALL-SYSTEM
+          --add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
+          --add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+          </argLine>
         </configuration>
       </plugin>
     </plugins>
